--- a/src/assets/css/scroll.css
+++ b/src/assets/css/scroll.css
@@ -1,4 +1,4 @@
-/* Estilo para el desplazamiento hacia abajo */
+/* scroll.css */
 @media screen and (min-width: 1200px) {
     .scroll-down {
         position: fixed;
@@ -12,10 +12,7 @@
 
     #content {
         padding-top: 60px;
-        /* Ajusta el valor según la altura de tu encabezado */
         scroll-margin-top: 60px;
-        /* Ajusta el valor según la altura de tu encabezado */
-
     }
 }
 
@@ -32,21 +29,22 @@
 
     #content {
         padding-top: 10px;
-        /* Ajusta el valor según la altura de tu encabezado */
         scroll-margin-top: 10px;
-        /* Ajusta el valor según la altura de tu encabezado */
-
     }
+}
+
+.scroll-down a::before {
+    content: "👇"; /* Cambiado a un emoji de mano */
+    font-size: 2rem;
+    display: block;
+    text-align: center;
+    margin-bottom: 5px;
 }
 
 .scroll-down a {
     animation: bounce 1.5s infinite;
     color: var(--text-color);
 }
-
-
-
-
 
 .scroll-down.visible {
     opacity: 1;
@@ -57,15 +55,8 @@
     pointer-events: none;
 }
 
-
-
 @keyframes bounce {
-
-    0%,
-    20%,
-    50%,
-    80%,
-    100% {
+    0%, 20%, 50%, 80%, 100% {
         transform: translateY(0);
     }
 
