--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import url('./assets/css/header.css');
 @import url('./assets/css/scroll.css');
-@import url('./assets/css/paragraph.css');
 @import url('./assets/css/card.css');
+section {
+    padding: 40px 0;
+    margin-bottom: 40px;
+}
